ci: publish scripts

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start": "vite",
     "build": "vite build && tsc -p tsconfig.production.json",
+    "prepublishOnly": "npm run build",
+    "postpublish": "git push --flow-tags",
     "serve": "vite preview"
   },
   "repository": {
