--- a/package.json
+++ b/package.json
@@ -15,6 +15,15 @@
     "url": "https://github.com/wmzy/native-router-react"
   },
   "sideEffects": false,
+  "author": "wmzy",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/wmzy/native-router-react/issues"
+  },
+  "homepage": "https://github.com/wmzy/native-router-react",
+  "engines": {
+    "node": ">=14"
+  },
   "peerDependencies": {
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
@@ -34,6 +43,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react": "^1.0.1",
+    "core-js": "^3.18.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "typescript": "^4.3.2",
