--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,28 @@
+# Include your project-specific ignores in this file
+# Read about how to use .gitignore: https://help.github.com/articles/ignoring-files
+
+build
+database.sqlite
 node_modules
+ncp-debug.log
+npm-debug.log
+
+# nyc
+coverage
+.nyc_output
+
+# IDE
+.idea
+.vscode/*
+!.vscode/launch.json
+
 .DS_Store
-dist
-dist-ssr
-*.local
+
+tmp
+
+*.zip
+*.tgz
+
+/.nyc_output
+
+/dist
