--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "scripts": {
     "start": "vite",
     "build": "vite build && tsc -p tsconfig.production.json",
+    "commit": "lint-staged && git-cz -n",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "lint": "eslint --fix src test demos *.js --ext .js,.jsx,.ts,.tsx",
+    "test": "cross-env NODE_ENV=test nyc mocha",
+    "test:watch": "npm test -- --watch",
     "prepublishOnly": "npm run build",
     "postpublish": "git push --follow-tags",
     "serve": "vite preview"
@@ -33,20 +38,55 @@
     "universal-router": "^9.1.0"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.15.4",
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
+    "@babel/register": "^7.15.3",
+    "@linaria/babel-preset": "^3.0.0-beta.13",
     "@linaria/core": "^3.0.0-beta.4",
     "@linaria/rollup": "^3.0.0-beta.12",
     "@linaria/shaker": "^3.0.0-beta.12",
+    "@testing-library/react": "^12.1.2",
+    "@types/mocha": "^9.0.0",
     "@types/node": "^16.7.10",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/sinon": "^10.0.4",
+    "@typescript-eslint/eslint-plugin": "^5.1.0",
+    "@typescript-eslint/parser": "^5.1.0",
     "@vitejs/plugin-react": "^1.0.1",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "commitizen": "^4.2.4",
     "core-js": "^3.18.1",
+    "coveralls": "^3.1.1",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.0.1",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-typescript": "^14.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-compat": "^3.13.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-mocha": "^9.0.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "global-jsdom": "^8.3.0",
+    "husky": "^7.0.2",
+    "jsdom": "^18.0.0",
+    "lint-staged": "^11.2.3",
+    "mocha": "^9.1.3",
+    "nyc": "^15.1.0",
+    "prettier": "^2.4.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "should": "^13.2.3",
+    "should-sinon": "0.0.6",
+    "sinon": "^11.1.2",
     "typescript": "^4.3.2",
-    "vite": "^2.5.2"
+    "vite": "^2.5.2",
+    "why-is-node-running": "^2.2.0"
   }
 }
