test: add unit test

--- a/package.json
+++ b/package.json
@@ -86,7 +86,6 @@
     "should-sinon": "0.0.6",
     "sinon": "^11.1.2",
     "typescript": "^4.3.2",
-    "vite": "^2.5.2",
-    "why-is-node-running": "^2.2.0"
+    "vite": "^2.5.2"
   }
 }
