--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "start": "vite",
-    "build": "vite build && tsc -p tsconfig.production.json",
+    "build": "vite build && tsc -p tsconfig.production.json && tsc-alias -p tsconfig.production.json",
     "commit": "lint-staged && git-cz -n",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "lint": "eslint --fix src test demos *.js --ext .js,.jsx,.ts,.tsx",
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "history": "^5.0.1",
+    "path-to-regexp": "^6.2.0",
     "universal-router": "^9.1.0"
   },
   "devDependencies": {
@@ -85,6 +86,7 @@
     "should": "^13.2.3",
     "should-sinon": "0.0.6",
     "sinon": "^11.1.2",
+    "tsc-alias": "^1.4.1",
     "typescript": "^4.3.2",
     "vite": "^2.5.2"
   }
