--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "commit": "lint-staged && git-cz -n",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "lint": "eslint --fix src test demos *.js --ext .js,.jsx,.ts,.tsx",
-    "deploy": "cross-env BABEL_ENV=development BUILD_DEMO=true vite build && gh-pages -d dist",
+    "doc:gen": "typedoc --out dist/doc src/index.tsx",
+    "build:demo": "cross-env BABEL_ENV=development BUILD_DEMO=true vite build",
+    "deploy": "npm run build:demo && npm run doc:gen && gh-pages -d dist",
     "test": "cross-env NODE_ENV=test nyc mocha",
     "test:watch": "npm test -- --watch",
     "prepublishOnly": "npm run build",
@@ -88,6 +90,9 @@
     "should-sinon": "0.0.6",
     "sinon": "^11.1.2",
     "tsc-alias": "^1.4.1",
+    "typedoc": "^0.23.22",
+    "typedoc-plugin-mark-react-functional-components": "^0.2.2",
+    "typedoc-plugin-missing-exports": "^1.0.0",
     "typescript": "^4.3.2",
     "vite": "^2.5.2"
   }
