docs: comments and typedoc

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "commit": "lint-staged && git-cz -n",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "lint": "eslint --fix src test demos *.js --ext .js,.jsx,.ts,.tsx",
-    "doc:gen": "typedoc --out dist/doc src/index.tsx",
+    "doc:gen": "typedoc",
     "build:demo": "cross-env BABEL_ENV=development BUILD_DEMO=true vite build",
-    "deploy": "npm run build:demo && npm run doc:gen && gh-pages -d dist",
+    "deploy": "npm run doc:gen && npm run build:demo && gh-pages -d dist",
     "test": "cross-env NODE_ENV=test nyc mocha",
     "test:watch": "npm test -- --watch",
     "prepublishOnly": "npm run build",
