--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.7.0",
   "main": "dist/native-router-react.es.js",
   "types": "dist/index.d.ts",
+  "files": ["dist"],
   "scripts": {
     "start": "vite",
     "build": "vite build && tsc -p tsconfig.production.json && tsc-alias -p tsconfig.production.json",
@@ -33,8 +34,8 @@
     "node": ">=14"
   },
   "peerDependencies": {
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0"
   },
   "dependencies": {
     "history": "^5.0.1",
