--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "deploy": "npm run doc:gen && npm run build:demo && gh-pages -d dist",
     "test": "cross-env NODE_ENV=test nyc mocha",
     "test:watch": "npm test -- --watch",
-    "prepublishOnly": "npm run build",
+    "preversion": "npm run build",
+    "postversion": "npm publish",
     "postpublish": "git push --follow-tags && npm run deploy",
     "serve": "vite preview"
   },
