--- a/package.json
+++ b/package.json
@@ -53,63 +53,62 @@
     "react-dom": "^17.0.0 || ^18.0.0"
   },
   "dependencies": {
-    "history": "^5.0.1",
-    "path-to-regexp": "^6.2.0"
+    "history": "^5.3.0",
+    "path-to-regexp": "^6.2.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.8",
-    "@babel/preset-env": "^7.15.8",
-    "@babel/preset-react": "^7.14.5",
-    "@babel/preset-typescript": "^7.15.0",
-    "@babel/register": "^7.15.3",
-    "@linaria/babel-preset": "^3.0.0-beta.13",
-    "@linaria/core": "^3.0.0-beta.4",
-    "@linaria/rollup": "^3.0.0-beta.12",
-    "@linaria/shaker": "^3.0.0-beta.12",
-    "@testing-library/react": "^12.1.2",
-    "@types/mocha": "^9.0.0",
-    "@types/node": "^16.7.10",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/sinon": "^10.0.4",
-    "@typescript-eslint/eslint-plugin": "^5.1.0",
-    "@typescript-eslint/parser": "^5.1.0",
-    "@vitejs/plugin-react": "^1.0.1",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "commitizen": "^4.2.4",
-    "core-js": "^3.18.1",
+    "@babel/core": "^7.22.8",
+    "@babel/preset-env": "^7.22.7",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
+    "@babel/register": "^7.22.5",
+    "@linaria/babel-preset": "^4.4.5",
+    "@linaria/core": "^4.2.10",
+    "@linaria/vite": "^4.2.11",
+    "@testing-library/react": "^14.0.0",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^20.4.1",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "@types/sinon": "^10.0.15",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "@vitejs/plugin-react": "^4.0.3",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "commitizen": "^4.3.0",
+    "core-js": "^3.31.1",
     "coveralls": "^3.1.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.0.1",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-airbnb-typescript": "^14.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-import-resolver-typescript": "^2.5.0",
-    "eslint-plugin-compat": "^3.13.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-mocha": "^9.0.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "gh-pages": "^3.2.3",
-    "global-jsdom": "^8.3.0",
-    "husky": "^7.0.2",
-    "jsdom": "^18.0.0",
-    "lint-staged": "^11.2.3",
-    "mocha": "^9.1.3",
+    "eslint": "^8.44.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-compat": "^4.1.4",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-mocha": "^10.1.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "gh-pages": "^5.0.0",
+    "global-jsdom": "^9.0.1",
+    "husky": "^8.0.3",
+    "jsdom": "^22.1.0",
+    "lint-staged": "^13.2.3",
+    "mocha": "^10.2.0",
     "nyc": "^15.1.0",
-    "prettier": "^2.4.1",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
+    "prettier": "^3.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "should": "^13.2.3",
     "should-sinon": "0.0.6",
-    "sinon": "^11.1.2",
-    "tsc-alias": "^1.4.1",
-    "typedoc": "^0.23.22",
+    "sinon": "^15.2.0",
+    "tsc-alias": "^1.8.7",
+    "typedoc": "^0.24.8",
     "typedoc-plugin-mark-react-functional-components": "^0.2.2",
-    "typedoc-plugin-missing-exports": "^1.0.0",
-    "typescript": "^4.3.2",
-    "vite": "^2.5.2"
+    "typedoc-plugin-missing-exports": "^2.0.0",
+    "typescript": "^5.1.6",
+    "vite": "^4.4.3"
   }
 }
