--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "native-router-react",
   "version": "0.8.4",
-  "main": "dist/native-router-react.es.js",
+  "main": "dist/native-router-react.mjs",
+  "exports": {
+    ".": "./dist/native-router-react.mjs"
+  },
   "keywords": [
     "react",
     "router",
@@ -104,6 +107,7 @@
     "should": "^13.2.3",
     "should-sinon": "0.0.6",
     "sinon": "^15.2.0",
+    "terser": "^5.19.0",
     "tsc-alias": "^1.8.7",
     "typedoc": "^0.24.8",
     "typedoc-plugin-mark-react-functional-components": "^0.2.2",
