--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "native-router-react",
+  "name": "@native-router/react",
   "version": "0.12.0",
   "exports": {
     ".": {
@@ -45,15 +45,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/wmzy/native-router-react"
+    "url": "https://github.com/wmzy/@native-router/react"
   },
   "sideEffects": false,
   "author": "wmzy",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/wmzy/native-router-react/issues"
+    "url": "https://github.com/wmzy/@native-router/react/issues"
   },
-  "homepage": "https://github.com/wmzy/native-router-react",
+  "homepage": "https://github.com/wmzy/@native-router/react",
   "engines": {
     "node": ">=14"
   },
