--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@native-router/react",
   "version": "0.12.0",
+  "type": "module",
   "exports": {
     ".": {
       "import": "./dist/index.mjs",
@@ -31,12 +32,12 @@
     "start:ssr": "cross-env SSR=true vite",
     "build": "vite build && tsc -p tsconfig.production.json && tsc-alias -p tsconfig.production.json",
     "commit": "lint-staged && git-cz -n",
-    "coverage": "nyc report --reporter=text-lcov > ./.nyc_output/coverage.txt",
+    "coverage": "c8 report --reporter=text-lcov > ./coverage/coverage.txt",
     "lint": "eslint --fix src test demos *.js --ext .js,.jsx,.ts,.tsx",
     "doc:gen": "typedoc",
     "build:demo": "cross-env BABEL_ENV=development BUILD_DEMO=true vite build",
     "deploy": "npm run doc:gen && npm run build:demo && gh-pages -d dist",
-    "test": "cross-env NODE_ENV=test nyc mocha",
+    "test": "cross-env NODE_ENV=test c8 mocha",
     "test:watch": "npm test -- --watch",
     "preversion": "npm run build",
     "postversion": "npm publish",
@@ -62,63 +63,62 @@
     "react-dom": "^17.0.0 || ^18.0.0"
   },
   "dependencies": {
-    "history": "^5.3.0",
-    "path-to-regexp": "^6.2.1"
+    "@native-router/core": "^1.0.1",
+    "history": "^5.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.9",
-    "@babel/preset-env": "^7.22.9",
-    "@babel/preset-react": "^7.22.5",
-    "@babel/preset-typescript": "^7.22.5",
-    "@babel/register": "^7.22.5",
+    "@babel/core": "^7.22.17",
+    "@babel/preset-env": "^7.22.15",
+    "@babel/preset-react": "^7.22.15",
+    "@babel/preset-typescript": "^7.22.15",
     "@linaria/babel-preset": "^4.5.4",
     "@linaria/core": "^4.5.4",
     "@linaria/vite": "^4.5.4",
     "@testing-library/react": "^14.0.0",
     "@types/mocha": "^10.0.1",
-    "@types/node": "^20.4.5",
-    "@types/react": "^18.2.16",
+    "@types/node": "^20.6.0",
+    "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
-    "@types/sinon": "^10.0.15",
-    "@typescript-eslint/eslint-plugin": "^6.2.0",
-    "@typescript-eslint/parser": "^6.2.0",
-    "@vitejs/plugin-react": "^4.0.3",
+    "@types/sinon": "^10.0.16",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
+    "@vitejs/plugin-react": "^4.0.4",
     "babel-plugin-module-resolver": "^5.0.0",
+    "c8": "^8.0.1",
     "commitizen": "^4.3.0",
-    "core-js": "^3.31.1",
+    "core-js": "^3.32.2",
     "coveralls": "^3.1.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.45.0",
+    "eslint": "^8.49.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-compat": "^4.1.4",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-import-resolver-typescript": "^3.6.0",
+    "eslint-plugin-compat": "^4.2.0",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-mocha": "^10.1.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-react": "^7.33.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "gh-pages": "^5.0.0",
-    "global-jsdom": "^9.0.1",
+    "gh-pages": "^6.0.0",
+    "global-jsdom": "^9.1.0",
     "husky": "^8.0.3",
     "jsdom": "^22.1.0",
-    "lint-staged": "^13.2.3",
+    "lint-staged": "^14.0.1",
     "mocha": "^10.2.0",
-    "nyc": "^15.1.0",
-    "prettier": "^3.0.0",
+    "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "should": "^13.2.3",
     "should-sinon": "0.0.6",
     "sinon": "^15.2.0",
-    "terser": "^5.19.2",
+    "terser": "^5.19.4",
     "tsc-alias": "^1.8.7",
-    "typedoc": "^0.24.8",
+    "typedoc": "^0.25.1",
     "typedoc-plugin-mark-react-functional-components": "^0.2.2",
-    "typedoc-plugin-missing-exports": "^2.0.0",
-    "typescript": "^5.1.6",
-    "vite": "^4.4.7"
+    "typedoc-plugin-missing-exports": "^2.1.0",
+    "typescript": "^5.2.2",
+    "vite": "^4.4.9"
   }
 }
