--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "type": "module",
   "exports": {
     ".": {
-      "import": "./dist/index.mjs",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs",
       "types": "./dist/types/index.d.ts"
     },
     "./server": {
-      "import": "./dist/server.mjs",
+      "import": "./dist/server.js",
+      "require": "./dist/server.cjs",
       "types": "./dist/types/server.d.ts"
     }
   },
